# vocatype-claude-claude

./: PRD.md  README.md  index.html  package-lock.json  package.json
.cursor/rules/: rules.mdc
reference-implementation/: index.html
reference-implementation/src/: main.ts
reference-implementation/src-tauri/: tauri.conf.json
reference-implementation/src-tauri/src/: lib.rs  main.rs
reference-implementation/src-tauri/src/ai/: mod.rs  types.rs
reference-implementation/src-tauri/src/audio/: capture.rs  vad.rs
reference-implementation/src-tauri/src/commands/: audio_commands.rs  mod.rs  performance_commands.rs
reference-implementation/src-tauri/src/core/: mod.rs
reference-implementation/src-tauri/src/stt/: types.rs
reference-implementation/src-tauri/src/system/: clipboard.rs
reference-implementation/src-tauri/src/utils/: error.rs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: gemini.rs  mod.rs
src-tauri/src/audio/: buffer.rs  mod.rs  types.rs
src-tauri/src/commands/: ai_commands.rs  audio_commands.rs  mod.rs  system_commands.rs
src-tauri/src/stt/: mod.rs  whisper.rs
src-tauri/src/system/: hotkeys.rs  mod.rs
src-tauri/src/utils/: mod.rs  performance.rs
