[package]
name = "vocatype-temp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vocatype_temp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio processing
cpal = "0.15"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for AI APIs
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization/Configuration
config = "0.13"
toml = "0.8"

# System integration
global-hotkey = "0.5"
futures = "0.3"

# Audio processing utilities
hound = "3.5"
dasp_sample = "0.11"
rustfft = "6.1"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"

